syntax = "proto2";

package SearchProto;

option java_package = "cool.qun.estate.backend.protocol.search";

import "Resource.proto";
import "WebpbOptions.proto";
import "ArticleEntry.proto";

message SearchHistoryPb {
    repeated string entries = 1;
}

message HotSearchPb{
    repeated string entries = 1;
}

message SearchResultPb{
    required string module =1;
    repeated ArticleEntryProto.articleEntryPb entries = 2;
    required ResourceProto.PagingPb paging = 3;
}

message HotSearchResponse {
    required ResourceProto.PagingPb paging = 1;
    required HotSearchPb  entries= 2;
}

message SearchHistoryResponse {
    required ResourceProto.PagingPb paging = 1;
    required SearchHistoryPb  entries= 2;
}

message SearchResultResponse{
    repeated SearchResultPb data= 1;
}
message PolicyArticlesResponse{
    repeated ArticleEntryProto.articleEntryPb data = 1;
    required ResourceProto.PagingPb paging = 2;
}

message HotSearchRequest {
    option (method) = 'GET';
    option (path) = '/api/search/hot?page={pageable.page}&size={pageable.size}';
    required ResourceProto.PageablePb pageable = 1 [(omitted) = true];
}

message SearchHistoryRequest {
    option (method) = 'GET';
    option (path) = '/api/search/history?page={pageable.page}&size={pageable.size}';
    required ResourceProto.PageablePb pageable = 1 [(omitted) = true];

}

message SearchResultRequest {
    option (method) = 'GET';
    option (path) = '/api/search/result?page={pageable.page}&size={pageable.size}&key={key}&module={module}';
    required ResourceProto.PageablePb pageable = 1;
    required string key = 2;
    optional string module = 3;
}

message PolicyArticlesRequest {
    option (method) = 'GET';
    option (path) = '/api/search/policy?page={pageable.page}&size={pageable.size}&module={module}';
    required ResourceProto.PageablePb pageable = 1;
    required string module = 2;
}


